# Bulletin-Board

./: .gitignore  CMakeLists.txt  README  app.qrc  board.cpp  board.h  bull_thread.cpp  bull_thread.h  main.cpp  mainwindow.cpp  mainwindow.h  task_thread.cpp  task_thread.h
tests/: bulletins_app_tests.cpp
